--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<p>Welcome to git Learning</p>
+		<p>Welcome to git Learning< Course</p>
 	</body>
 </html>
