--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<p>Welcome to git Learning< Course</p>
+		<p>
+			Welcome to git Learning< Course, now learning branches on newfeature
+		</p>
 	</body>
 </html>
