create conflict on master

--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<p>
-			Welcome to git Learning< Course, now learning branches on newfeature
-		</p>
+		<p>Welcome to git Learning< Course, now learning branches on master</p>
 	</body>
 </html>
