--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<p>Welcome to git Learning Course, now learning branches on new</p>
+		<p>Welcome to git Learning Course,I am on master</p>
 	</body>
 </html>
