--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	</head>
 	<body>
 		<p>
-			Welcome to git Learning Course, now learning branches on nasdasdew
+			Welcome to git Learning Course, now learning branches on new earning
+			stash
 		</p>
 	</body>
 </html>
