--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<p>
-			Welcome to git Learning Course, now learning branches on new earning
+			Welcome to git Learning Course, now learning branches on remote repo
 			stash
 		</p>
 	</body>
