--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<p>
 			Welcome to git Learning Course, now learning branches on remote repo
-			stash
+			setting up
 		</p>
 	</body>
 </html>
